# asp-sgr-litli-ntc-a

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
src/asp_sgr_litli_ntc_a/: cli.py  config.py  defaults.py  linked_in.py  llm.py
src/asp_sgr_litli_ntc_a/cli/: __init__.py  actions.py
tests/: conftest.py  test_actions.py
